@@ -1,4 +1,4 @@
-DIST cppcsp2-2.0.3.tar.gz 322712 RMD160 721828a8d2779671ce95fe7e681d462342630190 SHA1 7651dd1dbd378273955dfe744def5bd8fb79fdc6 SHA256 d9b5bba1bf4833bc29a228b60b4f519c31b5accda40558bcea98b5ec302d46a3
-EBUILD cppcsp2-2.0.3.ebuild 799 RMD160 959207d4e896daa07c95a3d169804e2d22b1c7c6 SHA1 43d3a34f4f67012fb7d24ce9e5e44410f7f3d5f6 SHA256 a86fccaa4f3617952e08c3f8463080f7385c256307adf7707a9014e626c7284f
-MISC ChangeLog 406 RMD160 1bb5aeb04b197f949e5b8312f6531173c6886dac SHA1 f8deff0a96cb4b743820e003ea5e98cce8bf8c19 SHA256 53eadd5ff29db2adae095f832a01fb18a4a78e2468484278ef1b6472ef55bba8
+DIST cppcsp2-2.0.5.tar.gz 276483 RMD160 88543201ed8ce366f7f524c3bd6d044c381f1ce6 SHA1 e13d290a9df131c1900bfaa6224cf546e4dbd853 SHA256 6d5c22db8b2ec1a10850f565acfa14b515fb47e94adb325c7ad2906afd99fc8c
+EBUILD cppcsp2-2.0.5.ebuild 785 RMD160 8ca61082b51eddded17c6a076f305ee67e53088c SHA1 a1dce8a246dcb615f3e7d86cc69bf504e9b701bd SHA256 231e062a1f6a818e4517fa44ac41634f32bf812d4819e07133ebd6b2db999d10
+MISC ChangeLog 671 RMD160 06e2313b26c1ab0d1050151fdd2ce121c6c02a50 SHA1 2a2ad502f8abddd40e2d53516fb5575ea8310ac6 SHA256 08ddfb7d449c2e59a1bafa3eef5f07f58193c48d926f5357ccbc9cd75a873735
 MISC metadata.xml 156 RMD160 537178ef5a820896e97475fb9aded47d50474bef SHA1 2a4ef4879b918a28132d21cd6d1bbaa2a30dccde SHA256 0e8490f9c62cb74e5894b52f643a02de0024d97dbfebad43082dce6bcb39555f
