@@ -1,6 +1,13 @@
 # ChangeLog for dev-cpp/cppcsp2
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/cppcsp2/Attic/ChangeLog,v 1.1 2008/01/20 09:56:50 dev-zero Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/cppcsp2/Attic/ChangeLog,v 1.2 2009/03/06 15:08:33 dev-zero Exp $
+
+*cppcsp2-2.0.5 (06 Mar 2009)
+
+  06 Mar 2009; Tiziano Müller <dev-zero@gentoo.org> -cppcsp2-2.0.3.ebuild,
+  +cppcsp2-2.0.5.ebuild:
+  Version bump, added boost-dep (bug #227471). Dropped old version which
+  doesn't compile with >=gcc-4.3 anyway (also bug #227471).
 
 *cppcsp2-2.0.3 (20 Jan 2008)
 
